// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SchemaFrame renders empty 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-ckVGcZ kBdcBn"
      >
        <table
          class="sc-jKJlTe dZzJYx"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-eNQAEJ dLDvOd table-row"
            >
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-jKJlTe dZzJYx"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-eNQAEJ dLDvOd table-row"
            >
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders empty for Neo4j >= 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-ckVGcZ kBdcBn"
      >
        <table
          class="sc-jKJlTe dZzJYx"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Index Name
              </th>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Type
              </th>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Uniqueness
              </th>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                EntityType
              </th>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                LabelsOrTypes
              </th>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Properties
              </th>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                State
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-eNQAEJ dLDvOd table-row"
            >
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              >
                None
              </td>
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              />
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              />
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              />
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              />
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              />
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              />
            </tr>
          </tbody>
        </table>
        <table
          class="sc-jKJlTe dZzJYx"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-eNQAEJ dLDvOd table-row"
            >
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              >
                None
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;

exports[`SchemaFrame renders results for Neo4j < 4.0 1`] = `
<div>
  <div
    style="width: 100%;"
  >
    <div>
      <div
        class="sc-ckVGcZ kBdcBn"
      >
        <table
          class="sc-jKJlTe dZzJYx"
          data-testid="schemaFrameIndexesTable"
        >
          <thead>
            <tr>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Indexes
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-eNQAEJ dLDvOd table-row"
            >
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              >
                 ON :Movie(released) ONLINE 
              </td>
            </tr>
          </tbody>
        </table>
        <table
          class="sc-jKJlTe dZzJYx"
          data-testid="schemaFrameConstraintsTable"
        >
          <thead>
            <tr>
              <th
                class="sc-hMqMXs cSWiPQ table-header"
              >
                Constraints
              </th>
            </tr>
          </thead>
          <tbody>
            <tr
              class="sc-eNQAEJ dLDvOd table-row"
            >
              <td
                class="sc-kEYyzF cDmnOp table-properties"
              >
                 ON ( book:Book ) ASSERT book.isbn IS UNIQUE
              </td>
            </tr>
          </tbody>
        </table>
        <br />
        <p
          class="lead"
        >
          Execute the following command to visualize what's related, and how
        </p>
        <figure>
          <pre
            class="code runnable"
          >
            <i
              class="fa fa-play-circle-o"
              style="padding-right:4px"
            />
            CALL db.schema.visualization
          </pre>
        </figure>
      </div>
    </div>
  </div>
</div>
`;
